LLM integration with Test Cases Integration

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,31 @@
+# ========================================
+# BACKEND CONFIGURATION (Required)
+# ========================================
+# Copy this file to .env and fill in your actual values
+
+# Node environment (development | production | staging)
+NODE_ENV=development
+
+# Backend server port
+PORT=8080
+
+# Frontend origin (comma-separated for multiple origins in production)
+CORS_ORIGIN=http://localhost:5175
+
+# Session encryption secret (MUST be changed in production)
+# Generate a strong secret: node -e "console.log(require('crypto').randomBytes(32).toString('hex'))"
+SESSION_SECRET=your-super-secret-key-change-in-production
+
+# ========================================
+# DATABASE (Optional - Future use)
+# ========================================
+# DB_URL=postgresql://user:password@localhost:5432/dbname
+# DB_NAME=test_automation_db
+
+# ========================================
+# LLM INTEGRATIONS (Optional - Frontend only)
+# ========================================
+
 # LLM Integrations Configuration
 # Copy this file to .env.local and fill in your actual credentials
 # Never commit .env.local to version control
@@ -29,8 +57,13 @@ VITE_TESTLEAF_API_KEY=...
 VITE_TESTLEAF_API_ENDPOINT=https://api.testleaf.com/v1
 VITE_TESTLEAF_DEFAULT_MODEL=testleaf-sft
 
-# Other Integrations (for future use)
-VITE_JIRA_API_KEY=your_jira_api_key_here
+# Other Integrations
+# Jira Configuration
 VITE_JIRA_API_ENDPOINT=https://your-domain.atlassian.net
-VITE_SERVICENOW_API_KEY=your_servicenow_api_key_here
+VITE_JIRA_USERNAME=your-email@example.com
+VITE_JIRA_API_KEY=your_jira_api_token_here
+
+# ServiceNow Configuration
 VITE_SERVICENOW_API_ENDPOINT=https://your-instance.service-now.com
+VITE_SERVICENOW_USERNAME=your_servicenow_username
+VITE_SERVICENOW_PASSWORD=your_servicenow_password
