Test Cases Extract Option

--- a/.env.example
+++ b/.env.example
@@ -10,11 +10,15 @@ NODE_ENV=development
 PORT=8080
 
 # Frontend origin (comma-separated for multiple origins in production)
-CORS_ORIGIN=http://localhost:5175
+CORS_ORIGIN=http://localhost:5175,http://localhost:5176
 
 # Session encryption secret (MUST be changed in production)
 # Generate a strong secret: node -e "console.log(require('crypto').randomBytes(32).toString('hex'))"
 SESSION_SECRET=your-super-secret-key-change-in-production
+
+# Frontend API Base URL (for calling backend endpoints)
+# Use localhost to match frontend origin and avoid CORS issues
+VITE_API_BASE_URL=http://localhost:8080
 
 # ========================================
 # DATABASE (Optional - Future use)
@@ -38,7 +42,7 @@ VITE_OPENAI_DEFAULT_MODEL=gpt-4-turbo
 # Groq
 VITE_GROQ_API_KEY=gsk_...
 VITE_GROQ_API_ENDPOINT=https://api.groq.com/openai/v1
-VITE_GROQ_DEFAULT_MODEL=mixtral-8x7b-32768
+VITE_GROQ_DEFAULT_MODEL=openai/gpt-oss-120b
 
 # Azure OpenAI
 VITE_AZURE_OPENAI_API_KEY=...
