--- a/swagger-backend/.env.example
+++ b/swagger-backend/.env.example
@@ -4,7 +4,7 @@ MONGODB_DB_NAME=swagger_test_generator
 
 # LLM Provider Configuration
 LLM_PROVIDER=groq
-GROQ_API_KEY=<update your groq api key here>
+GROQ_API_KEY=your Groq API key here
 OPENAI_API_KEY=sk-your_openai_api_key_here
 ANTHROPIC_API_KEY=sk-ant-your_anthropic_api_key_here
 MISTRAL_API_KEY=7u3QeQgLHhUjBxLxyJ4FqC0y4ptQYvG7
