visual testing enhancements

--- a/visualTest-backend/.env.test
+++ b/visualTest-backend/.env.test
@@ -42,3 +42,10 @@ PIXEL_MISMATCH_PERCENTAGE=7
 AI_THRESHOLD=70
 MAX_RETRIES=3
 QUEUE_CONCURRENCY=5
+
+# Dynamic Content Handling
+DISABLE_ANIMATIONS=true
+BLOCK_ADS=true
+SCROLL_TO_TRIGGER_LAZY_LOAD=true
+MULTIPLE_SCREENSHOTS_COUNT=1
+STABILITY_CHECK_TIMEOUT=5000
